# long-multiplication-calculator

./: README.md
src/: CMakeLists.txt  main.c
src/long-multiplication-command-line/: Cargo.toml
src/long-multiplication-command-line/src/: lib.rs  main.rs
src/long-multiplication-command-line/src/arguments/: mod.rs
src/long-multiplication-command-line/src/breakdown/: mod.rs
src/long-multiplication-command-line/src/display/: mod.rs
src/long-multiplication-command-line/src/generate/: mod.rs
src/long-multiplication-command-line/src/length/: mod.rs
src/long-multiplication-command-line/src/long_multiplication/: mod.rs
src/long-multiplication-command-line/src/multiplication/: mod.rs
web/: .ftpquota  .htaccess  index.html
web/asset/bash/: init.bash  init.sh
web/asset/css/: styles.css
web/asset/js/: scripts.js
