[package]
name = "long-multiplication-command-line"
version = "1.0.0"
edition = "2021"
description = "Create a table with the long-multiplication method given two coefficients."
authors = ["Israel Roldan <israel.alberto.rv@gmail.com>"]
repository = "https://github.com/airvzxf/long-multiplication-calculator"
license = "GPL-3.0"
# readme = "README.md"
# homepage = "https://pending.rs"
# documentation = "https://docs.pending.rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
